updata photo and paper

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
         <div class="row no-gutters">
         <div class ="col-5 col-md-5">
         <div class = "white_boxed">
-        <img class="scale_img" src="data/images/ignore_QiongChen.jpg">
+        <img class="scale_img" src="data/images/qiong_image.jpg">
         </div>
         </div>
         <div class ="col-7 col-md-7">
@@ -67,7 +67,7 @@
 
         </div>
 
-<!--
+
         <h1></h1> 
         <h4>Main Publications </h4>	
         <p class="right_pad"><font color="gray">(* represents for equal contribution)</font></p>
@@ -76,27 +76,27 @@
         <div class="row no-gutters align-items-start">
         <div class ="col-4 col-md-4">
         <div class = "white_boxed">
-          <img class="scale_img_100" src='data/images/adversarial-example.jpg'>
+          <img class="scale_img_100" src='data/images/babybox.pdf'>
         </div>
       </div>
       <div class ="col-8 col-md-8">
         <div class = "white_boxed">
-          <p class="small"><font color="#c03c3b">[NDSS'20] </font>Metamorph: Injecting Inaudible Commands into Over-the-air Voice Controlled Systems</p>
- -->         
+          <p class="small"><font color="#c03c3b">[EMBC'20] </font>Non-Contact Heart Rate Monitoring in Neonatal Intensive Care Unit using RGB Camera</p>
+
           <!-- <p class="small">Over-the-air Voice Controlled Systems </p> -->
- <!--     
-          <p class="small"><strong>Tao Chen</strong>, Longfei Shangguan, Zhenjiang Li, Kyle Jamieson </p>
-          <p class="small"><a href="https://www.ndss-symposium.org/" target="_blank" rel="noopener"><em>NDSS Symposium 2020</em> </a>, San Diego, CA, February 2020 </p>
---> 
+
+          <p class="small"><strong>Qiong Chen</strong>, Xinyu Jiang, Xiangyu Liu, Chunmei Lu, Laishuan Wang, Wei Chen </p>
+          <p class="small"><a href="https://embc.embs.org/2020/" target="_blank" rel="noopener"><em>EMBS Virtual Academy 2020</em> </a>, Montreal, Canada, July 2020 </p>
+
           <!-- <p> </p> -->
-<!--
+
           <p class="small">       
-            <a href="https://acoustic-metamorph-system.github.io/" target="_blank" rel="noopener">[Project]</a> &nbsp;&nbsp; 
-            <a href="data/papers/2020-metamorph-ndss/Metamorph_CameraReady.pdf" target="_blank" rel="noopener">[Paper]</a> &nbsp;&nbsp;    
-            <a href="data/papers/2020-metamorph-ndss/Metamorph-Slides.pdf" target="_blank" rel="noopener">[Slides]</a> &nbsp;&nbsp;  
-            <a href="#">[Video]</a> &nbsp;&nbsp; 
+ <!--           <a href="https://acoustic-metamorph-system.github.io/" target="_blank" rel="noopener">[Project]</a> &nbsp;&nbsp; -->
+            <a href="data/papers/EMBC2020/Non-Contact Heart Rate Monitoring in Neonatal Intensive Care Unit.pdf" target="_blank" rel="noopener">[Paper]</a> &nbsp;&nbsp;
+  <!--           <a href="data/papers/2020-metamorph-ndss/Metamorph-Slides.pdf" target="_blank" rel="noopener">[Slides]</a> &nbsp;&nbsp;  -->
+  <!--         <a href="#">[Video]</a> &nbsp;&nbsp;  -->
           </p>
--->
+
 <!--           <p class="very_small"> <font color="gray">(<i>We cannot attend the symposium due to the outbreak of COVID-2019. Thanks Dr.Yan for helping us with the presentation.</i>)</font></p> -->
 <!--
         </div>
