--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
           205, 遗传学楼 <br>
           Fudan University <br>
           Shanghai, China </p>
-          <p>Email: 19210720086@fudan.edu.cn </p>
+          <p>Email: qiongchen19@fudan.edu.cn </p>
          <!-- <p> <a href="https://scholar.google.com/citations?user=C6RUzpEAAAAJ&hl=en" target="_blank" rel="noopener">Google Scholar</a></p> -->
           <p> <a href="https://github.com/Qiong-Chen" target="_blank" rel="noopener">Github</a></p>  
          </div>
