--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
     		<h4> Short Bio </h4>
         <hr color=#F1ECEC size="1">
         <div class ="boxed">
-          <p>I am a first year Master student working with Prof. <a href="http://homepage.fudan.edu.cn/wchen/" target="_blank" rel="noopener">Wei Chen</a> in the <a href="http://ee.fudan.edu.cn/" target="_blank" rel="noopener">Department of Electronic Engineering</a> at Fudan University, where I work on vital signs monitoring via camera, based on signal processing methods, machine learning models. <strong>Specifically, I have strong interests on infants heart rate monitoring</strong>. 
+          <p>I am a second year Master student working with Prof. <a href="http://homepage.fudan.edu.cn/wchen/" target="_blank" rel="noopener">Wei Chen</a> in the <a href="http://ee.fudan.edu.cn/" target="_blank" rel="noopener">Department of Electronic Engineering</a> at Fudan University, where I work on vital signs monitoring via camera, based on signal processing methods, machine learning models. <strong>Specifically, I have strong interests on infants heart rate monitoring</strong>.
           </p>
           <!--  -->
           <p>I did my bachelors in 2019 at <a href="https://www.xidian.edu.cn/" target="_blank" rel="noopener">Xidian University</a>, Xi'an, China.
